Renamed package option "caption" to "tweak-caption-package"

--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -219,7 +219,7 @@
 Options have to be given in a key-value comma separated list as in \texttt{key1=val1,key2=val2}. After loading the package, options can also be specified or overwritten with the command \verb|\subfiglistsetup{options}|. Currently the following options are supported.
 
 \begin{description}
-\item[\texttt{caption}\enskip] Can be set to \texttt{true} or \texttt{false} and will be set to \texttt{true} when specified completely without value. Default value is \texttt{true}. This option cannot be changed after \verb|\begin{document}|.
+\item[\texttt{tweak-caption-package}\enskip] Can be set to \texttt{true} or \texttt{false} and will be set to \texttt{true} when specified completely without value. Default value is \texttt{true}. This option cannot be changed after \verb|\begin{document}|.
 
 This option decides whether the interface provided by the \texttt{caption} package is used for formatting of the subfigure labels. This interface is powerful, but in order to use it some internal commands of the \texttt{caption} package have to be modified. Compatibility was only tested for version 3.3 of the \texttt{caption} package and things may fail for any other version.
 
