--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -276,94 +276,94 @@
 % Keys as options for package loading
 \keys_define:nn { subfiglist }
 {
-  % Use caption package for generation of label?
-  caption.bool_set:N            = \subfiglist_use_caption_package_bool,
-  caption.default:n             = true,
+  % Tweak caption package for generation of labels?
+  tweak-caption-package.bool_set:N = \subfiglist_use_caption_package_bool,
+  tweak-caption-package.default:n  = true,
   
   % Width of environment
-  environment-width.tl_set:N    = \subfiglist_env_width_default_tl,
+  environment-width.tl_set:N       = \subfiglist_env_width_default_tl,
   environment-width.value_required:,
-  ew.meta:n                     = { environment-width = #1 },
+  ew.meta:n                        = { environment-width = #1 },
   ew.value_required:,
   
   % Space between canvases
-  environment-space.tl_set:N    = \subfiglist_env_space_default_tl,
+  environment-space.tl_set:N       = \subfiglist_env_space_default_tl,
   environment-space.value_required:,
-  es.meta:n                     = { environment-space = #1 },
+  es.meta:n                        = { environment-space = #1 },
   es.value_required:,
   
   % Space above canvas
-  canvas-top.tl_set:N           = \subfiglist_canvas_top_default_tl,
+  canvas-top.tl_set:N              = \subfiglist_canvas_top_default_tl,
   canvas-top.value_required:,
-  ct.meta:n                     = { canvas-top = #1 },
+  ct.meta:n                        = { canvas-top = #1 },
   ct.value_required:,
   
   % Space below canvas
-  canvas-bottom.tl_set:N        = \subfiglist_canvas_bot_default_tl,
+  canvas-bottom.tl_set:N           = \subfiglist_canvas_bot_default_tl,
   canvas-bottom.value_required:,
-  cb.meta:n                     = { canvas-bottom = #1 },
+  cb.meta:n                        = { canvas-bottom = #1 },
   cb.value_required:,
   
   % Space left of canvas
-  canvas-left.tl_set:N          = \subfiglist_canvas_left_default_tl,
+  canvas-left.tl_set:N             = \subfiglist_canvas_left_default_tl,
   canvas-left.value_required:,
-  cl.meta:n                     = { canvas-left = #1 },
+  cl.meta:n                        = { canvas-left = #1 },
   cl.value_required:,
   
   % Space right of canvas
-  canvas-right.tl_set:N         = \subfiglist_canvas_right_default_tl,
+  canvas-right.tl_set:N            = \subfiglist_canvas_right_default_tl,
   canvas-right.value_required:,
-  cr.meta:n                     = { canvas-right = #1 },
+  cr.meta:n                        = { canvas-right = #1 },
   cr.value_required:,
   
   % Horizontal positioning of label (left, center, right)
   label-hpos.choice:,
-  label-hpos.choices:nn         = { l, c, r }
+  label-hpos.choices:nn            = { l, c, r }
     { \tl_set_eq:NN \subfiglist_label_hpos_default_tl \l_keys_choice_tl },
   label-hpos.value_required:,
   lh.choice:,
-  lh.choices:nn                 = { l, c, r }
+  lh.choices:nn                    = { l, c, r }
     { \tl_set_eq:NN \subfiglist_label_hpos_default_tl \l_keys_choice_tl },
   lh.value_required:,
   
   % Vertical positioning of label (top, center, bottom)
   label-vpos.choice:,
-  label-vpos.choices:nn         = { t, c, b }
+  label-vpos.choices:nn            = { t, c, b }
     { \tl_set_eq:NN \subfiglist_label_vpos_default_tl \l_keys_choice_tl },
   label-vpos.value_required:,
   lv.choice:,
-  lv.choices:nn                 = { t, c, b }
+  lv.choices:nn                    = { t, c, b }
     { \tl_set_eq:NN \subfiglist_label_vpos_default_tl \l_keys_choice_tl },
   lv.value_required:,
   
   % Horizontal shift of label
-  label-xshift.tl_set:N         = \subfiglist_label_xshift_default_tl,
+  label-xshift.tl_set:N            = \subfiglist_label_xshift_default_tl,
   label-xshift.value_required:,
-  lx.meta:n                     = { label-xshift = #1 },
+  lx.meta:n                        = { label-xshift = #1 },
   lx.value_required:,
   
   % Vertical shift of label
-  label-yshift.tl_set:N         = \subfiglist_label_yshift_default_tl,
+  label-yshift.tl_set:N            = \subfiglist_label_yshift_default_tl,
   label-yshift.value_required:,
-  ly.meta:n                     = { label-yshift = #1 },
+  ly.meta:n                        = { label-yshift = #1 },
   ly.value_required:,
   
   % Label color
-  label-color.tl_set:N          = \subfiglist_label_color_default_tl,
+  label-color.tl_set:N             = \subfiglist_label_color_default_tl,
   label-color.value_required:,
-  label-colour.meta:n           = { label-color = #1 },
+  label-colour.meta:n              = { label-color = #1 },
   label-colour.value_required:,
-  lc.meta:n                     = { label-color = #1 },
+  lc.meta:n                        = { label-color = #1 },
   lc.value_required:,
   
   % Label background
-  label-background.tl_set:N     = \subfiglist_label_background_default_tl,
+  label-background.tl_set:N        = \subfiglist_label_background_default_tl,
   label-background.value_required:,
-  lb.meta:n                     = { label-background = #1 },
+  lb.meta:n                        = { label-background = #1 },
   lb.value_required:,
   
   % Error catching
-  unknown.code:n                =
+  unknown.code:n                   =
   {
     \msg_error:nnVn { subfiglist } \subfiglist_option_unknown_message_name_tl
       \l_keys_key_tl { subfiglist~package }
@@ -374,19 +374,19 @@
 \tl_set:Nn \subfiglist_option_unknown_message_name_tl { option~unknown }
 \keys_set:nn { subfiglist }
 {
-  caption           = true,
-  environment-width = \textwidth,
-  environment-space = 1ex,
-  canvas-top        = 0pt,
-  canvas-bottom     = 0pt,
-  canvas-left       = 0pt,
-  canvas-right      = 0pt,
-  label-hpos        = l,
-  label-vpos        = t,
-  label-xshift      = 0.5ex,
-  label-yshift      = 0.5ex,
-  label-color       = .,
-  label-background  = none
+  tweak-caption-package = true,
+  environment-width     = \textwidth,
+  environment-space     = 1ex,
+  canvas-top            = 0pt,
+  canvas-bottom         = 0pt,
+  canvas-left           = 0pt,
+  canvas-right          = 0pt,
+  label-hpos            = l,
+  label-vpos            = t,
+  label-xshift          = 0.5ex,
+  label-yshift          = 0.5ex,
+  label-color           = .,
+  label-background      = none
 }
 \ProcessKeysOptions { subfiglist }
 
@@ -2920,7 +2920,7 @@
                           % Put hook for label
                           \rlap{ \subfiglist_tmpb_tl }
                         }{
-                          \hbox:N
+                          \hbox:n
                           {
                             \refstepcounter { subfigure }
                             \color { \subfiglist_tmpa_tl }
